syntax = "proto3";

package session;

import "google/protobuf/timestamp.proto";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

import "github.com/havoc-io/mutagen/sync/entry.proto";
import "github.com/havoc-io/mutagen/url/url.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;

enum Version {
    Unknown = 0;
    Version1 = 1;
}

message Session {
    string identifier = 1;
    Version version = 2;
    google.protobuf.Timestamp creationTime = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    uint32 creatingVersionMajor = 4;
    uint32 creatingVersionMinor = 5;
    uint32 creatingVersionPatch = 6;
    url.URL alpha = 7;
    url.URL beta = 8;
    repeated string ignores = 9;
    bool paused = 10;
    uint64 ignoreSize = 11;
}

// Archive is a wrapper around Entry that allows identification of non-existent
// directories. In-memory, a nil-Entry (that arrives without any error)
// represents an absence of content on the filesystem. Unfortunately, there is
// no way to represent that as an encoded message (an empty byte slice would
// successfully decode to an empty directory entry). By adding a level of
// indirection that allows for an unset root entry, we can encode Entry messages
// in a way that allows us to represent absence.
message Archive {
    sync.Entry root = 1;
}
